--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "author": "Gabriele",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
     "node-sass": "^9.0.0",
+    "postcss": "^8.4.38",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
