--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "Gabriele",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "dotenv-webpack": "^8.1.0",
@@ -20,6 +19,8 @@
     "mini-css-extract-plugin": "^2.9.0",
     "node-sass": "^9.0.0",
     "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^9.5.14",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.3",
