--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 API_HACKER=urlPath + v0/newstories.json # get last 500 news
-API_HACKER=urlPath + v0/item/id.json # get info by id
+            =urlPath + v0/item/id.json # get info by id
